--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "* Chris D.\r * Nathaniel A.\r * Kateryna B.\r * Colin R.\r * Jose M.\r * Ronald M.\r * Bayleigh W.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    
+    "install": "cd server && npm i",
+    "seed": "cd server && npm run seed"
   },
   "repository": {
     "type": "git",
@@ -12,6 +15,18 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "apollo-server-express": "^2.11.0",
+    "bcrypt": "^4.0.1",
+    "express": "^4.17.1",
+    "graphql": "^15.5.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.7",
+    "stripe": "^8.130.0"
+  },
+  "devDependencies": {
+    "concurrently": "^5.1.0"
+  },
   "bugs": {
     "url": "https://github.com/chdonovan/Jobs-posting/issues"
   },
