--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "watch": "nodemon",
-    "seed" : "node config/seed.js"
-
+    "seed": "node config/seed.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,11 +16,7 @@
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.7"
-
-  },
-  "devDependencies": {
-    "nodemon": "^2.02"
+    "mongoose": "^5.9.7",
+    "nodemon": "^2.0.12"
   }
-
 }
