--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "if-env": "^1.0.4"
+    "autoprefixer": "^10.3.2",
+    "if-env": "^1.0.4",
+    "postcss": "^8.3.6",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^2.2.7"
   },
   "devDependencies": {
     "concurrently": "^5.3.0"
