--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "jobs-posting",
   "version": "1.0.0",
   "description": "* Chris D.\r * Nathaniel A.\r * Kateryna B.\r * Colin R.\r * Jose M.\r * Ronald M.\r * Bayleigh W.",
-  "main": "index.js",
+  "main": "server/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/chdonovan/Jobs-posting.git"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "cd server && npm start",
+    "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "seed": "cd server && npm run seed",
+    "heroku-postbuild": "cd client && npm run build"
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "if-env": "^1.0.4"
+  },
+  "devDependencies": {
+    "concurrently": "^5.3.0"
+  },
   "bugs": {
     "url": "https://github.com/chdonovan/Jobs-posting/issues"
   },
