--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "job-posting",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001/",
   "dependencies": {
     "@apollo/client": "^3.4.8",
     "@craco/craco": "^6.2.0",
